B.A B.Ed option set on hold

--- a/static/courses.html
+++ b/static/courses.html
@@ -34,7 +34,7 @@
               </button>
               <div id="courseOpts" class="dropdown-content courseCardOpts">
                 <a href="/courses/options/api/B.Sc B.Ed">B.Sc B.Ed</a>
-                <a href="/courses/options/api/B.A B.Ed">B.A B.Ed</a>
+                <!-- <a href="/courses/options/api/B.A B.Ed">B.A B.Ed</a> -->
               </div>
             </div>
           </div>
