Major changed made

--- a/static/about.html
+++ b/static/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About | Previous Papers</title>
+    <title>About | previouspapers.onrender.com</title>
     <link rel="stylesheet" href="/css/index.css" />
     <link rel="stylesheet" href="/css/courses.css" />
     <link rel="icon" type="image/x-icon" href="./imgs/favicon.ico" />
@@ -12,40 +12,51 @@
   </head>
   <body>
     <header>
-      <nav class="navbar">Previous papers</nav>
+      <nav class="navbar">About Us</nav>
     </header>
     <main>
       <section class="about">
-        <h2>About "previouspapers.com":</h2>
-        <p>
-          The "previouspapers.com" is built to help students who are pursuing
-          different courses in universities of Rajasthan and can't understand
-          the paper pattern. From here students can download previous year
-          papers and prepare for their further college exams. Here students will
-          find all the papers at free of cost.
-        </p>
-        <br />
-        <h2>About the creators:</h2>
-        <p>
-            <b>
-
-                Designed and Developed By:
-            </b>
-            <ul>
-                <li> <b> Vaibhav Prajapat</b>: Pursuing B.Sc B.Ed integrated course from the "Maharana Pratap College, Uniyara (Tonk) Raj." affiliated from "Maharshi Dayananda Saraswati University, Ajmer Raj.".</li>
-                <li><b>Abhishek Jain</b>: Pursuing B.Sc course from "Pannadhay College, Tonk Raj." affiliated from "Maharshi Dayananda Saraswati University, Ajmer Raj."</li>
-            </ul>
-        </p>
-        <br />
-        <h2>Credits:</h2>
-        <p>
-            <ul>
-                <li><b>Icons: </b> <a href="https://fontawesome.com/">Font Awesome</a> </li>
-                <li><b>images: </b> <a href="https://www.canva.com/">Canva</a>, <a href="https://www.google.com">Google</a> </li>
-                <li><b>Design:</b> Abhishek Jain</li>
-                <li><b>Papers:</b> ...</li>
-            </ul>
-        </p>
+        <div class="about-blocks">
+          <h1 class="heading">About website</h1>
+          <p class="content">
+            The "previouspapers.onrender.com" is built to help students who are
+            pursuing different courses in universities of Rajasthan and can't
+            understand the paper pattern. From here students can download
+            previous year papers and prepare for their further college exams for
+            absolutely free of cost.
+          </p>
+        </div>
+        <div class="about-blocks">
+          <h1 class="heading">About the creators</h1>
+          <p class="content">
+            <span class="role">Developed</span> by<b> Vaibhav Prajapat</b>
+            pursuing B.Sc B.Ed integrated course from the "Maharana Pratap
+            College, Uniyara (Tonk) Raj." affiliated from "Maharshi Dayananda
+            Saraswati University, Ajmer Raj.".
+            <br />
+            <span class="role">Designed</span> by<b> Abhishek Bansal</b>
+            pursuing B.Sc course from "Pannadhay College, Tonk Raj." affiliated
+            from "Maharshi Dayananda Saraswati University, Ajmer Raj."
+          </p>
+        </div>
+        <div class="about-blocks">
+          <h2 class="heading">Credits:</h2>
+          <p class="content">
+            <b>Design:</b> Abhishek Bansal & Vaibhav Prajapat <br />
+            <b>Developement:</b>
+            <a href="" class="external-links">Vaibhav Prajapat</a> <br />
+            <b>images: </b>
+            <a href="https://www.canva.com/" class="external-links">Canva</a>,
+            <a href="https://www.google.com" class="external-links">Google</a>
+            <br />
+            <b>Icons: </b>
+            <a href="https://fontawesome.com/" class="external-links"
+              >Font Awesome</a
+            >
+            <br />
+            <b>Papers:</b> ... <br />
+          </p>
+        </div>
       </section>
     </main>
   </body>
