traffic monitoring system implemented

--- a/static/index.html
+++ b/static/index.html
@@ -13,6 +13,15 @@
     <link rel="icon" type="image/x-icon" href="./imgs/favicon.ico" />
   </head>
   <body>
+    <div class="welcome-popup-box">
+      <div class="welcome-popup">
+        <div class="interactions">
+          <h1>Welcome</h1>
+          <p>The previouspapers.onrender.com is built to provide previous examination papers to the students who are studying in colleges of Rajasthan</p>
+        </div>
+        <a href="/usercount" class="welcome-btn">Continue</a>
+      </div>
+    </div>
     <nav class="navbar">
       <div class="logo">
         <img src="imgs/logo.png" alt="logo" id="logo-img" />
@@ -58,11 +67,11 @@
           </div>
           
 
-        <div class="more-btn-div">
+        <!-- <div class="more-btn-div">
           <a href="" class="more-card-btn"
             >More <span><i class="fa-solid fa-arrow-right-long"></i></span
           ></a>
-        </div>
+        </div> -->
       </div>
     </section>
     <hr />
@@ -73,7 +82,7 @@
       <form action="/contact" method="post" class="contact-form">
         <div class="contact-intro">
           <h1>Want to connect?</h1>
-          <p>Got any problem realted to papers or website? Get in touch with us and we'll reply as soon as possible</p>
+          <p>Got any problem related to papers or website? Get in touch with us and we'll get connected shortly on email.</p>
         </div>
         <div class="name-form form-inp-div">
           <span class="form-icon-span">
