--- a/static/about.html
+++ b/static/about.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About | previouspapers.onrender.com</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    />
     <link rel="stylesheet" href="/css/index.css" />
     <link rel="stylesheet" href="/css/courses.css" />
     <link rel="icon" type="image/x-icon" href="./imgs/favicon.ico" />
@@ -12,7 +16,12 @@
   </head>
   <body>
     <header>
-      <nav class="navbar">About Us</nav>
+      <nav class="navbar">
+        <a href="/" class="about-home-navigator"
+          ><i class="fa-solid fa-arrow-left"></i>Home</a
+        >
+        About Us
+      </nav>
     </header>
     <main>
       <section class="about">
